syntax = "proto3";

package auth;

service AuthService {
  rpc SignIn(SignInRequest) returns (SignInResponse);
  rpc SignOut(SignOutRequest) returns (SignOutResponse);
  rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}

message SignInRequest {
  string userId = 1;
  string userPassword = 2;
}

message SignInResponse {
  string accessToken = 1;
}

message SignOutRequest {

}

message SignOutResponse {
  string message = 1;
}

message RefreshTokenRequest {

}

message RefreshTokenResponse {
  string accessToken = 1; // 새로 생성된 액세스 토큰
}

