syntax = "proto3";

package member;

service MemberService {
  rpc SignUp(SignUpRequest) returns (SignUpResponse);

  rpc UserInfo(UserInfoRequest) returns (UserInfoResponse);

  rpc CheckDuplicateId(CheckDuplicateIdRequest) returns (CheckDuplicateIdResponse);
  rpc CheckDuplicateNickname(CheckDuplicateNicknameRequest) returns (CheckDuplicateNicknameResponse);
  rpc CheckDuplicateNicknameWithToken(CheckDuplicateNicknameWithTokenRequest) returns (CheckDuplicateNicknameWithTokenResponse);

  rpc UpdateProfilePhoto(UpdateProfileRequest) returns (UpdateProfileResponse);
  rpc UpdateNickname(UpdateNicknameRequest) returns (UpdateNicknameResponse);
  rpc UpdatePassword(UpdatePasswordRequest) returns (UpdatePasswordResponse);
}

message SignUpRequest {
  string userId = 1;
  string userPassword = 2;
  string userNickname = 3;
  string profileName = 4;
  string profileType = 5;
  bytes profileData = 6;
}

message SignUpResponse {
  string message = 1;
}

message UserInfoRequest {

}

message UserInfoResponse {
  string userNickname = 1;
  bytes profileData = 2;
  int32 userStatus = 3;
}

message CheckDuplicateIdRequest {
  string userId = 1;
}

message CheckDuplicateIdResponse {
  bool isIdDuplicate = 1;
}

message CheckDuplicateNicknameRequest {
  string userNickname = 1;
}

message CheckDuplicateNicknameResponse {
  bool isNicknameDuplicate = 1;
}


message CheckDuplicateNicknameWithTokenRequest {
  string newNickname = 1;
}

message CheckDuplicateNicknameWithTokenResponse {
  bool isDuplicate = 1;
}

message UpdateProfileRequest {
  string profileName = 1;
  string profileType = 2;
  bytes profileData = 3;
}

message UpdateProfileResponse {
  string message = 1;
}

message UpdateNicknameRequest {
  string userNickname = 1;
}

message UpdateNicknameResponse {
  string message = 1;
}

message UpdatePasswordRequest {
  string oldPassword = 1;
  string newPassword = 2;
}

message UpdatePasswordResponse {
  string message = 1;
}